--- a/css/styles.css
+++ b/css/styles.css
@@ -3,42 +3,36 @@ These styles allow you to change the appearance of elements on your site. */
 
 /* Tip: Highlight a line and press “Ctrl” + “/” to comment and uncomment it. */
 
-* {}
+/* MAIN STYLES */
 
 body {
-    font-family: Arial, sans-serif;
-    font-family: Georgia, serif;
     margin: 0;
+    margin-top: 7em;
     padding: 0;
-    background-color: #f9f9f9;
-    line-height: 1.6;
+
+    /* font-family: Arial, sans-serif; */
+    /* font-family: Georgia, serif; */
+    /* line-height: 1.6; */
+}
+
+main {
+    min-height: calc(100vh - 5em);
 }
 
 header {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 1em 0;
+    height: 5em;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
-header nav ul {
-    list-style: none;
-    padding: 0;
-}
 
-header nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-header nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-header nav ul li a:hover {
-    text-decoration: underline;
+img {
+    max-height: 100%;
+    max-width: 100%;
 }
 
 section {
@@ -48,4 +42,47 @@ section {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+.container {
+    display: flex;
+}
+
+.left-block,
+.right-block {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.left-block img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.right-block {
+    padding: 20px;
+    background-color: lightgrey;
+}
+
+
+/* FOOTER */
+
+footer {
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    background-color: grey;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+footer p {
+    margin: 0 auto;
+    text-align: center;
 }
